<resources>
    <string name="app_name">Student AMS</string>

    <string name="sign_in_title">Вход</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="sign_in_text">Войти</string>
    <string name="forgot_your_password_text">Забыли пароль?</string>
    <string name="title_text">Student Attendance</string>
    <string name="logo_text">Logo</string>
    <string name="sign_up_text">Зарегистрироваться</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="account_already_exists_text">У меня уже есть аккаунт</string>
    <string name="event_members_text">Участники события</string>

    <string name="next_button_text">Далее</string>
    <string name="back_button_text">Назад</string>
    <string name="finish_button_text">Готово</string>
    <string name="confirm_password_text">Подтвердите пароль</string>

    <string name="title_profile">Профиль</string>
    <string name="title_attendance">Посещаемость</string>
    <string name="title_study">Задания</string>
    <string name="title_schedule">События</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_qr_scanner">QR код</string>
    <string name="title_image_key">Граф. ключ</string>
    <string name="title_solve_tests">Тесты</string>
    <string name="already_submit_code">You have already submitted your answer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="password_error">Invalid password</string>
    <string name="about_app">О приложении</string>
    <string name="settings_title">Настройки</string>
    <string name="email_text">E-mail</string>
    <string name="logout_title">Выйти</string>
    <string name="surname_text">Фамилия</string>
    <string name="name_text">Имя</string>
    <string name="patronymic_text">Отчество</string>
    <string name="subscribe_string">Записаться</string>
    <string name="pass_attendance">Пройти проверку</string>

    <string name="group">группа %s</string>
    <string name="creator">Создатель события</string>

    <string name="cancel">Отменить</string>
    <string name="supporting_text">Вы уверены, что хотите выйти из учетной записи?</string>

    <!-- Типы событий -->
    <string name="lecture">lecture</string>
    <string name="educational_practice">educational_practice</string>
    <string name="standard_practice">standard_practice</string>
    <string name="lab">lab</string>
    <string name="coursework">coursework</string>
    <string name="string_logout">Выйти</string>
    <string name="legal_information">Правовая информация</string>
    <string name="change_password">Сменить пароль</string>
    <string name="academic_performance">Моя успеваемость</string>
    <string name="my_attendance">Моя посещаемость</string>
    <string name="portfolio">Портфолио</string>
    <string name="additional_information">Дополнительная информация</string>
    <string name="attendance_label">Проверка посещаемости</string>

</resources>
