<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_profile" />

        <item
            android:id="@+id/attendanceFragment"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/title_attendance" />

        <item
            android:id="@+id/scheduleFragment"
            android:icon="@drawable/baseline_calendar_black_18dp"
            android:title="@string/title_schedule" />
    </group>

    <item
        android:id="@+id/about_app_dest"
        android:icon="@drawable/ic_note_black_24dp"
        android:title="@string/about_app" />
    <item
        android:id="@+id/settings_dest"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings_title" />
</menu>