<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about_app_dest"
        android:icon="@drawable/ic_note_black_24dp"
        android:orderInCategory="1"
        android:menuCategory="secondary"
        android:title="@string/about_app" />
    <item
        android:id="@+id/settings_dest"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="2"
        android:menuCategory="secondary"
        android:title="@string/settings_title" />

    <item
        android:id="@+id/logout_dest"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="3"
        android:menuCategory="secondary"
        android:title="@string/logout_title" />
</menu>