<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:id="@+id/loginForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signInButton"
        android:paddingTop="72dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_loginForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_text"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="72dp"
            android:textSize="21sp"
            android:fontFamily="@font/roboto"
            >
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_text"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_account_circle_black_24dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorAccent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password_text"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/colorAccent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordButton"
            android:labelFor="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password_text"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorAccent"
            >

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginForm">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_account_text"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="8dp"
        >

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>