<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:id="@+id/registerForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="74dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSignUpTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:layout_marginBottom="10dp"
            app:hintTextColor="@color/gray_600"
            android:textColorHint="@color/gray_600"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordSignUpTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/gray_600"
            android:textColorHint="@color/gray_600"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerForm"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            app:cornerRadius="5dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            >
        </com.google.android.material.button.MaterialButton>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>