<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.student_attendance_ms.network.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.profile.ProfileFragment">

        <RelativeLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_fio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/profile_icon"
                android:layout_toEndOf="@id/profile_icon"
                android:fontFamily="@font/roboto"
                android:text="@{user.name + ' ' + user.surname}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Евгений Рейдель"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/profile_icon"
                android:layout_toEndOf="@id/profile_icon"
                android:fontFamily="@font/roboto"
                android:text="@{@string/group(user.group)}"
                android:textColor="@color/gray_600"
                android:textSize="14sp"
                tools:text="группа 737-1"
                 />

        </RelativeLayout>

        <View
            android:id="@+id/profile_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/gray_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_header" />

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_divider">

            <TextView
                android:id="@+id/academic_performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:paddingVertical="10dp"
                android:text="@string/academic_performance"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

            <TextView
                android:id="@+id/my_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:paddingVertical="10dp"
                android:text="@string/my_attendance"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

            <TextView
                android:id="@+id/portfolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/portfolio"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/string_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>